--- a/index.html
+++ b/index.html
@@ -4,125 +4,150 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>☼ &#913☥&#914 ☽</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./style.css">
-        <!-- <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
-<link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css"> -->
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>☼ &#913☥&#914 ☽</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./style.css">
+    <!-- <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
+    <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css"> -->
+</head>
+
+<body>
+    <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <header>
+    <header>
         <div id="cv" class="cv">
-        <h1 id="h1">Vadym <i style="text-transform: none;">Alex<br>Briz</i> Chervoniak</h1>
-        <br><hr style="width: 24vw;">
-<h2>JavaScript | Python
-<br><i>engineer</i> && <i>developer</i></h2>
-<p>Mobile:<br> +380 505 444 199</p>
-<p>Email:<br> ua505444199@gmail.com</p>
-<p>LinkedIn:<br> https://www.linkedin.com/in/alex-briz-78948320b/</p>
-<p>GitHub:<br> https://github.com/Alex-Briz/</p>
-<p>Location:<br> Kyiv, Ukraine</p>
-</div>
-<div class="phrase">
-    <!-- <h2>&#9830&#9829 <i>with faith in the future</i> &#9827&#9824</h2> -->
-    <h2 style="letter-spacing: 0.5vw;">&#9830 &#9829 <i><a href="https://www.w3schools.com/html/html_symbols.asp">in</a></i> &#9856; &#9857; <i><b><a href="https://www.w3.org/">IT</a></b></i> &#9860; &#9861; <i>we trust</i> &#9827 &#9824</h2>
-    <!-- <h2>I believe in IT future, - Web, JavaScript, Python, AI.</h2> -->
-<!-- <p>I want to become a part of the professional team and share new successes at once.
-</p> -->
-</div>
-</header>
-<div class="block" id="icons">
+            <div>
+                <h1 id="h1">Vadym Chervoniak</h1>
+                <br>
+                <hr style="width: 24vw;">
+                <h2>JavaScript | Python
+                    <br><i>engineer</i> && <i>developer</i>
+                </h2>
+            </div>
+            <div>
+                <p>Mobile:<br> +380 505 444 199</p>
+                <p>Email:<br> ua505444199@gmail.com</p>
+                <p>Telegram:<br> @Alex11Briz</p>
+                <!-- <p>LinkedIn:<br> https://www.linkedin.com/in/alex-briz-78948320b/</p> -->
+                <p>GitHub:<br> https://github.com/Alex-Briz/</p>
+                <p>Location:<br> Kyiv, Ukraine</p>
+            </div>
+        </div>
+        <div class="phrase">
+            <h2 style="letter-spacing: 0.5vw;">&#9830 &#9829 <i><a
+                        href="https://www.w3schools.com/html/html_symbols.asp">in</a></i> &#9856; &#9857; <i><b><a
+                            href="https://www.w3.org/">IT</a></b></i> &#9860; &#9861; <i>we trust</i> &#9827 &#9824</h2>
+    </header>
+    <div class="block" id="icons">
+        <h3><b>TOOL#BOX</b></h3>
+        <ul>
+            <li><a href="https://code.visualstudio.com/"><img class="icon"
+                        src="./icons/Visual_Studio_Code_1.35_icon.svg.png">Visual Studio Code</a></li>
+            <li><a href="https://developer.chrome.com/docs/devtools/"><img class="icon"
+                        src="./icons/chromium.png">Chrome DevTools</a></li>
+            <li><a href="https://html.spec.whatwg.org/"><img class="icon" src="./icons/html-5.png">HTML5</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/CSS#CSS_3"><img class="icon"
+                        src="./icons/css3-9-1175237.webp">CSS3</a></li>
+            <li><a href="https://262.ecma-international.org/6.0/"><img class="icon"
+                        src="./icons/Ecma_RVB-003.jpg">ES6</a></li>
+            <li><a href="https://sass-lang.com/"><img class="icon" src="./icons/logo-b6e1ef6e.svg">SASS</a></li>
+            <li><a href="https://github.com/stylus/stylus/blob/master/docs/compare.md"><img class="icon"
+                        src="./icons/scss-3-236294.webp">SCSS</a></li>
+            <li><a href="https://learn.javascript.ru/"><img class="icon" src="./icons/js.png">JavaScript</a></li>
+            <li></li><a href="https://www.typescriptlang.org/"><img class="icon"
+                    src="./icons/typescript-1174965.webp">TypeScript</a> </li>
+            <li><a href="https://www.python.org/"><img class="icon"
+                        src="./icons/2048px-Python-logo-notext.svg.png">Python</a></li>
+            <li><a href="#"><img class="icon" src="./icons/695px-C_Programming_Language.svg.png">C</a> </li>
+            <li><a href="https://www.java.com/en/"><img class="icon" src="./icons/226777.png">Java</a></li>
+            <li><a href="https://angular.io/"><img class="icon" src="./icons/3h5gjh43gj5hhg43j-1.png">Angular</a> </li>
+            <li><a href="https://en.reactjs.org/"><img class="icon" src="./icons/React-icon.svg.png">React</a></li>
+            <li><a href="https://flask.palletsprojects.com/en/2.1.x/"><img class="icon"
+                        src="./icons/flask.jpg">Flask</a> </li>
+            <li><a href="https://www.djangoproject.com/"><img class="icon"
+                        src="./icons/django-logo-negative.png">Django</a></li>
+            <li><a href="https://eslint.org/"><img class="icon"
+                        src="./icons/cd7f2e77-553b-4be4-8df2-cb9ed8dcbe4d-logo.png">ESLint</a></li>
+            <li><a href="https://pypi.org/project/pylint/"><img class="icon" src="./icons/logo.png">Pylint</a></li>
+            <li><a href="https://nodejs.org/en/"><img class="icon" src="./icons/1200px-Node.js_logo.svg.png">Nodejs</a>
+            </li>
+            <li><a href="https://www.npmjs.com/"><img class="icon" src="./icons/540px-Npm-logo.svg.png">npm</a></li>
+            <li> <a href="https://pypi.org/"><img class="icon" src="./icons/PyPI_logo.svg.png">pip</a></li>
+            <li><a href="https://git-scm.com/"><img class="icon" src="./icons/Git_icon.svg.png">Git</a></li>
+            <li><a href="https://github.com/"><img class="icon"
+                        src="./icons/github-logo-5F384D0265-seeklogo.com.png">Github</a></li>
+            <li><a href="https://www.microsoft.com/uk-ua/windows"><img class="icon"
+                        src="./icons/Windows_logo_-_2012.svg.png">Windows</a>
+            <li><a href="https://linuxfoundation.org/linux-2/"><img class="icon" src="./icons/Tux.svg.png">Linux</a>
+            </li>
+            <li><a href="https://www.gnu.org/software/bash/manual/bash.html"><img class="icon"
+                        src="./icons/Bash_Logo_Colored.svg.png">Bash</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Comparison_of_command_shells"><img class="icon"
+                        src="./icons/PowerShell_Core_6.0_icon.png">CLI</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/SQL_syntax"><img class="icon"
+                        src="./icons/Sql_data_base_with_logo.png">SQL</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Representational_state_transfer"><img class="icon"
+                        src="./icons/rest.png">REST</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/API"><img class="icon" src="./icons/60e85b27c7220.jpg">API</a>
+            </li>
+            <li><a href="https://aws.amazon.com/"><img class="icon"
+                        src="./icons/1280px-Amazon_Web_Services_Logo.svg.png">AWS</a></li>
+            <li><a href="https://cloud.google.com/"><img class="icon"
+                        src="./icons/1200px-Google-cloud-platform-v2.svg.png">GCP</a></li>
+            <li><a
+                    href="https://en.wikipedia.org/wiki/Agile_software_development#The_Manifesto_for_Agile_Software_Development">
+            </li>
+            <li><img class="icon" src="./icons/Agile-method.png">Agile</a></li>
+            <li><a href="https://www.scrum.org/"><img class="icon" src="./icons/The-Scrum-Values.png">Scrum</a></li>
+            <li><a href="https://kanbaninstitute.com/"><img class="icon" src="./icons/4727387.png">Kanban</a></li>
+        </ul>
+    </div>
+    <div class="block">
+        <h3>EDUCATION</h3>
+        <p><a href="http://kpik.org.ua/">Kamianets-Podilskyi Vocational and Technical College
+                <br>of industry, business and information technology, Department of Electrification</p>
+        </a>
+        <p><a href="http://ptcsi.chnu.edu.ua/">Chernivtsi National University named after Yury Fedkovich, Department of
+                Physics
+            </a></p>
+        <h3>Courses:</h3>
+        <ul>
+            <li><a href="https://cs50.harvard.edu/web/2020/">cs50 - Web</a></li>
+            <li><a href="https://cs50.harvard.edu/ai/2020/">cs50 - AI</a></li>
+            <li><a href="https://pythoninstitute.org/pcap">Python cert</a></li>
+            <li><a href="https://www.freecodecamp.org/learn/">freeCodeCamp</a></li>
+            <li><a href="https://aws.amazon.com/training/learn-about/developer/?th=tile&tile=learnabout">AWS</a></li>
+            <li><a href="https://ai.google/education/">google ai</a></li>
+        </ul>
+    </div>
+    <div class="block">
+        <h3>EXPERIENCE</h3>
+        <p>I have experience working online as a rewriter-copywriter, call manager, customer support manager.</p>
+        <p>Currently, I am actively studying and looking for my appointment in the IT field.</p>
+        <p>HTML, CSS, JS, Nodejs, Python, Angular, Django, Flask.</p>
+        <p>I like to grow my technical and other skills, want to take a part in perspective industry and become a
+            professional full-stack web developer.
+        </p>
+        <a href="https://github.com/Alex-Briz">https://github.com/Alex-Briz</a>
+        <a href="https://gitlab.com/Alex-Briz">https://gitlab.com/Alex-Briz</a>
+    </div>
+    <div class="block">
+        <h3>ACHIEVEMENTS</h3>
+        <p>Project from scratch.</p>
+        <p>I set myself the goal of understanding something that seems difficult at first glance and despite the
+            difficulties at the beginning - in the end I get a feeling of happiness from the ability to achieve the
+            goal. </p>
+        <p>My pet projects are on git-hub.
+        </p>
+    </div>
+    <script src="solarDaysCalculator.js" async defer></script>
+    <script src="icons_processor.js" async defer></script>
+</body>
 
-<h3><b>TOOL#BOX</b></h3>
-<ul>
-<!-- <li style="list-style-image-width: 7vw; list-style-image-heigth: 7vw;
-list-style-image: url('./icons/Visual_Studio_Code_1.35_icon.svg.png');"> -->
-<li><a href="https://code.visualstudio.com/"><img class="icon" src="./icons/Visual_Studio_Code_1.35_icon.svg.png">Visual Studio Code</a></li>
-<li><a href="https://developer.chrome.com/docs/devtools/"><img class="icon" src="./icons/chromium.png">Chrome DevTools</a></li>
-<li><a href="https://html.spec.whatwg.org/"><img class="icon" src="./icons/html-5.png">HTML5</a>
-    <a href="https://en.wikipedia.org/wiki/CSS#CSS_3"><img class="icon" src="./icons/css3-9-1175237.webp">CSS3</a>
-    <a href="https://262.ecma-international.org/6.0/"><img class="icon" src="./icons/Ecma_RVB-003.jpg">ES6</a></li>
-<li>
-    <!-- <a href="#"><img class="icon" src="./icons/Visual_Studio_Code_1.35_icon.svg.png">Preprocessors</a> 
-    <a href="#"><img class="icon" src="./icons/Visual_Studio_Code_1.35_icon.svg.png">postprocessors</a> -->
-    <a href="https://sass-lang.com/"><img class="icon" src="./icons/logo-b6e1ef6e.svg">SASS</a>
-    <a href="https://github.com/stylus/stylus/blob/master/docs/compare.md"><img class="icon" src="./icons/scss-3-236294.webp">SCSS</a></li>
-<li><a href="https://learn.javascript.ru/"><img class="icon" src="./icons/js.png">JavaScript</a>
-    <a href="https://www.typescriptlang.org/"><img class="icon" src="./icons/typescript-1174965.webp">TypeScript</a> 
-    <a href="https://www.python.org/"><img class="icon" src="./icons/2048px-Python-logo-notext.svg.png">Python</a></li>
-    <li><a href="#"><img class="icon" src="./icons/695px-C_Programming_Language.svg.png">C</a> 
-    <a href="https://www.java.com/en/"><img class="icon" src="./icons/226777.png">Java</a></li>
-<li><a href="https://angular.io/"><img class="icon" src="./icons/3h5gjh43gj5hhg43j-1.png">Angular</a> 
-    <a href="https://en.reactjs.org/"><img class="icon" src="./icons/React-icon.svg.png">React</a>
-    <a href="https://flask.palletsprojects.com/en/2.1.x/"><img class="icon" src="./icons/flask.jpg">Flask</a> 
-    <a href="https://www.djangoproject.com/"><img class="icon" src="./icons/django-logo-negative.png">Django</a></li>
-<li><a href="https://eslint.org/"><img class="icon" src="./icons/cd7f2e77-553b-4be4-8df2-cb9ed8dcbe4d-logo.png">ESLint</a>
-    <a href="https://pypi.org/project/pylint/"><img class="icon" src="./icons/logo.png">Pylint</a></li>
-<li><a href="https://nodejs.org/en/"><img class="icon" src="./icons/1200px-Node.js_logo.svg.png">Nodejs</a></li>
-<li><a href="https://www.npmjs.com/"><img class="icon" src="./icons/540px-Npm-logo.svg.png">npm</a>
-    <a href="https://pypi.org/"><img class="icon" src="./icons/PyPI_logo.svg.png">pip</a></li>
-<li><a href="https://git-scm.com/"><img class="icon" src="./icons/Git_icon.svg.png">Git</a>
-    <a href="https://github.com/"><img class="icon" src="./icons/github-logo-5F384D0265-seeklogo.com.png">Github</a></li>
-<li><a href="https://www.microsoft.com/uk-ua/windows"><img class="icon" src="./icons/Windows_logo_-_2012.svg.png">Windows</a>
-    <a href="https://linuxfoundation.org/linux-2/"><img class="icon" src="./icons/Tux.svg.png">Linux</a>
-    <a href="https://www.gnu.org/software/bash/manual/bash.html"><img class="icon" src="./icons/Bash_Logo_Colored.svg.png">Bash</a>
-    <a href="https://en.wikipedia.org/wiki/Comparison_of_command_shells"><img class="icon" src="./icons/PowerShell_Core_6.0_icon.png">CLI</a></li>
-<li><a href="https://en.wikipedia.org/wiki/SQL_syntax"><img class="icon" src="./icons/Sql_data_base_with_logo.png">SQL</a>
-    <a href="https://en.wikipedia.org/wiki/Representational_state_transfer"><img class="icon" src="./icons/rest.png">REST</a> 
-    <a href="https://en.wikipedia.org/wiki/API"><img class="icon" src="./icons/60e85b27c7220.jpg">API</a></li>
-<li><a href="https://aws.amazon.com/"><img class="icon" src="./icons/1280px-Amazon_Web_Services_Logo.svg.png">AWS</a>
-    <a href="https://cloud.google.com/"><img class="icon" src="./icons/1200px-Google-cloud-platform-v2.svg.png">GCP</a></li>
-<li><a href="https://en.wikipedia.org/wiki/Agile_software_development#The_Manifesto_for_Agile_Software_Development">
-    <img class="icon" src="./icons/Agile-method.png">Agile</a>
-    <a href="https://www.scrum.org/"><img class="icon" src="./icons/The-Scrum-Values.png">Scrum</a>
-    <a href="https://kanbaninstitute.com/"><img class="icon" src="./icons/4727387.png">Kanban</a></li>
-<!-- <li><a href="#"><img class="icon" src="./icons/Visual_Studio_Code_1.35_icon.svg.png">English</a>
-    <a href="#"><img class="icon" src="./icons/Visual_Studio_Code_1.35_icon.svg.png">B1</a>
-    <a href="#"><img class="icon" src="./icons/Visual_Studio_Code_1.35_icon.svg.png">B2</a></li> -->
-</ul>
-</div>
-<div class="block">
-
-<h3>EDUCATION</h3>
-<p><a href="http://kpik.org.ua/">Kamianets-Podilskyi Vocational and Technical College
-<br>of industry, business and information technology, Department of Electrification</p>
-</a><p><a href="http://ptcsi.chnu.edu.ua/">Chernivtsi National University named after Yury Fedkovich, Department of Physics
-</a></p>
-<h3>Courses:</h3>
-<ul>
-<li><a href="https://cs50.harvard.edu/web/2020/">cs50 - Web</a></li>
-<li><a href="https://cs50.harvard.edu/ai/2020/">cs50 - AI</a></li>
-<li><a href="https://pythoninstitute.org/pcap">Python cert</a></li>
-<li><a href="https://www.freecodecamp.org/learn/">freeCodeCamp</a></li>
-<li><a href="https://aws.amazon.com/training/learn-about/developer/?th=tile&tile=learnabout">AWS</a></li>
-<li><a href="https://ai.google/education/">google ai</a></li>
-</ul>
-</div>
-<div class="block">
-<h3>EXPERIENCE</h3>
-<p>I have experience working online as a rewriter-copywriter, call manager, customer support manager.</p>
-<p>Currently, I am actively studying and looking for my appointment in the IT field.</p>
-<p>HTML, CSS, JS, Nodejs, Python, Angular, Django, Flask.</p>
-<p>I like to grow my technical and other skills, want to take a part in perspective industry and become a professional full-stack web developer.
-</p>
-<a href="https://github.com/Alex-Briz">https://github.com/Alex-Briz</a>
-<a href="https://gitlab.com/Alex-Briz">https://gitlab.com/Alex-Briz</a>
-</div>
-<div class="block">
-<h3>ACHIEVEMENTS</h3>
-<p>Project from scratch.</p>
-<p>I set myself the goal of understanding something that seems difficult at first glance and despite the difficulties at the beginning - in the end I get a feeling of happiness from the ability to achieve the goal. </p>
-<p>My pet projects are on git-hub.
-</p>
-   </div>     
-        <script src="solarDaysCalculator.js" async defer></script>
-        <script src="icons_processor.js" async defer></script>
-    </body>
 </html>
