--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <li><a href="https://github.com/stylus/stylus/blob/master/docs/compare.md"><img class="icon"
                         src="./icons/scss-3-236294.webp">SCSS</a></li>
             <li><a href="https://learn.javascript.ru/"><img class="icon" src="./icons/js.png">JavaScript</a></li>
-            <li></li><a href="https://www.typescriptlang.org/"><img class="icon"
-                    src="./icons/typescript-1174965.webp">TypeScript</a> </li>
+            <li><a href="https://www.typescriptlang.org/"><img class="icon"
+                    src="./icons/typescript-1174965.webp">TypeScript</a></li>
             <li><a href="https://www.python.org/"><img class="icon"
                         src="./icons/2048px-Python-logo-notext.svg.png">Python</a></li>
             <li><a href="#"><img class="icon" src="./icons/695px-C_Programming_Language.svg.png">C</a> </li>
@@ -102,8 +102,7 @@
                         src="./icons/1200px-Google-cloud-platform-v2.svg.png">GCP</a></li>
             <li><a
                     href="https://en.wikipedia.org/wiki/Agile_software_development#The_Manifesto_for_Agile_Software_Development">
-            </li>
-            <li><img class="icon" src="./icons/Agile-method.png">Agile</a></li>
+            <img class="icon" src="./icons/Agile-method.png">Agile</a></li>
             <li><a href="https://www.scrum.org/"><img class="icon" src="./icons/The-Scrum-Values.png">Scrum</a></li>
             <li><a href="https://kanbaninstitute.com/"><img class="icon" src="./icons/4727387.png">Kanban</a></li>
         </ul>
