cv to the footer

--- a/index.html
+++ b/index.html
@@ -21,23 +21,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <header>
-        <div id="cv" class="cv">
-            <div>
-                <h1 id="h1">Vadym Chervoniak</h1>
-                <br>
-                <hr style="width: 24vw;">
-                <h2>JavaScript | Python
-                    <br><i>engineer</i> && <i>developer</i>
-                </h2>
-            </div>
-            <div>
-                <p>Mobile:<br> +380 505 444 199</p>
-                <p>Email:<br> ua505444199@gmail.com</p>
-                <p>Telegram:<br> @Alex11Briz</p>
-                <!-- <p>LinkedIn:<br> https://www.linkedin.com/in/alex-briz-78948320b/</p> -->
-                <p>GitHub:<br> https://github.com/Alex-Briz/</p>
-                <p>Location:<br> Kyiv, Ukraine</p>
-            </div>
         </div>
         <div class="phrase">
             <h2 style="letter-spacing: 0.5vw;">&#9830 &#9829 <i><a
@@ -145,8 +128,29 @@
         <p>My pet projects are on git-hub.
         </p>
     </div>
-    <script src="solarDaysCalculator.js" async defer></script>
-    <script src="icons_processor.js" async defer></script>
+
+    <script src="solarDaysCalculator.js"></script>
+    <script src="icons_processor.js"></script>
+
+    <footer>
+        <div id="cv" class="cv">
+            <div>
+                <h1 id="h1">Vadym Chervoniak</h1>
+                <br>
+                <hr style="width: 24vw;">
+                <h2>JavaScript | Python
+                    <br><i>engineer</i> && <i>developer</i>
+                </h2>
+            </div>
+            <div>
+                <p>Mobile:<br> +380 505 444 199</p>
+                <p>Email:<br> ua505444199@gmail.com</p>
+                <p>Telegram:<br> @Alex11Briz</p>
+                <!-- <p>LinkedIn:<br> https://www.linkedin.com/in/alex-briz-78948320b/</p> -->
+                <p>GitHub:<br> https://github.com/Alex-Briz/</p>
+                <p>Location:<br> Kyiv, Ukraine</p>
+            </div>
+    </footer>
 </body>
 
 </html>
