portfolio images + img prjct from scrtch

--- a/index.html
+++ b/index.html
@@ -112,6 +112,17 @@
         <h3>EXPERIENCE</h3>
         <p>I have experience working online as a rewriter-copywriter, call manager, customer support manager.</p>
         <p>Currently, I am actively studying and looking for my appointment in the IT field.</p>
+        <div id="projects_scr">
+            <img class="project_scr_IMG" src="./portfolio/angular_simplicity.png">
+            <img class="project_scr_IMG" src="./portfolio/angular_simplicity_cli_template.png">
+            <img class="project_scr_IMG" src="./portfolio/angular_simplicity_routing.png">
+            <img class="project_scr_IMG" src="./portfolio/hw10_clicker1.png">
+            <img class="project_scr_IMG" src="./portfolio/hw10_clicker2.png">
+            <img class="project_scr_IMG" src="./portfolio/hw10_clicker3_local_storage.png">
+            <img class="project_scr_IMG" src="./portfolio/fireSnow_1.png">
+            <img class="project_scr_IMG" src="./portfolio/hw12_wordle_3.png">
+            <img class="project_scr_IMG" src="./portfolio/hw14_fetch2.png">
+        </div>
         <p>HTML, CSS, JS, Nodejs, Python, Angular, Django, Flask.</p>
         <p>I like to grow my technical and other skills, want to take a part in perspective industry and become a
             professional full-stack web developer.
@@ -122,6 +133,8 @@
     <div class="block">
         <h3>ACHIEVEMENTS</h3>
         <p>Project from scratch.</p>
+        <img class="project_scratch" src="./portfolio/photo_2022-07-19_00-13-38.jpg">
+        <img class="project_scratch" src="./portfolio/z_dices_and_dominos_4.png">
         <p>I set myself the goal of understanding something that seems difficult at first glance and despite the
             difficulties at the beginning - in the end I get a feeling of happiness from the ability to achieve the
             goal. </p>
