--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
                         src="./icons/PowerShell_Core_6.0_icon.png">CLI</a></li>
             <li><a href="https://en.wikipedia.org/wiki/SQL_syntax"><img class="icon"
                         src="./icons/Sql_data_base_with_logo.png">SQL</a></li>
+            <li><a href="https://jsonapi.org/"><img class="icon"
+                            src="./icons/JSON_vector_logo.svg.png">JSON</a></li>
             <li><a href="https://en.wikipedia.org/wiki/Representational_state_transfer"><img class="icon"
                         src="./icons/rest.png">REST</a></li>
             <li><a href="https://en.wikipedia.org/wiki/API"><img class="icon" src="./icons/60e85b27c7220.jpg">API</a>
