--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>☼ &#913☥&#914 ☽</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/png" href="./AB.png" sizes="128x128" />
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="icon" type="image/png" href="AB.png" sizes="128x128" />
     <!-- <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css"> -->
 </head>
@@ -22,7 +22,30 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <header>
+        <div id="main">
+            <div class="main_timers">
+            <div id="timer"></div>
+            <div id="timer_2"></div>
         </div>
+        <div id="main_text">
+            <span id="text">&#913☥&#914</span>
+            
+            <span id="text_2">&#913☥&#914</span>
+        </div>
+
+            <div id="main_menu"></div>
+        </div>
+    </div>
+    <div id="logo_wrapper">
+        <div id="logo">
+
+              <!-- <svg viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+                <line height="500" width="500" x1="0" y1="0" x2="500" y2="500" stroke="red" />
+              </svg> -->
+
+        </div>
+    </div>
+        <script src="./script.js"></script>
         <div class="phrase">
             <h2 style="letter-spacing: 0.5vw;">&#9830 &#9829 <i><a
                         href="https://www.w3schools.com/html/html_symbols.asp">in</a></i> &#9856; &#9857; <i><b><a
@@ -169,6 +192,15 @@
                 <p>Location:<br> Kyiv, Ukraine</p>
             </div>
     </footer>
+
+    <script>
+        document.body.style.width = '100%';
+document.body.style.height = '100%';
+document.body.style.display = 'flex';
+document.body.style.flexDirection = 'column';
+document.body.style.backgroundColor = 'black';
+document.body.style.color = 'white';
+    </script>
 </body>
 
 </html>
