AIB gridded logo add

--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
         </div>
     </div>
         <script src="./script.js"></script>
-        <div class="phrase">
+        <!-- <div class="phrase">
             <h2 style="letter-spacing: 0.5vw;">&#9830 &#9829 <i><a
                         href="https://www.w3schools.com/html/html_symbols.asp">in</a></i> &#9856; &#9857; <i><b><a
                             href="https://www.w3.org/">IT</a></b></i> &#9860; &#9861; <i>we trust</i> &#9827 &#9824</h2>
+        </div> -->
     </header>
     <div class="block" id="icons">
         <h3><b>TOOL#BOX</b></h3>
