logo - 1, styles changed

--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
             <div id="timer_2"></div>
         </div>
         <div id="main_text">
-            <span id="text">&#913☥&#914</span>
+            <span id="text">&#913 ☥ &#914</span>
             
-            <span id="text_2">&#913☥&#914</span>
+            <span id="text_2">&#913 ☥ &#914</span>
         </div>
 
-            <div id="main_menu"></div>
+            <div id="main_menu">
+                <span><b>menu</b></span>
+                <span class="mirrored">menu</span></div>
         </div>
     </div>
     <div id="logo_wrapper">
