random single-dot logo, style debug

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
             <div>
                 <h1 id="h1">Vadym Chervoniak</h1>
                 <br>
-                <hr style="width: 24vw;">
-                <h2>JavaScript | Python
+                <hr style="width: 100%;">
+                <div id="h2">JavaScript | Python
                     <br><i>engineer</i> && <i>developer</i>
-                </h2>
+                </div>
             </div>
             <div>
                 <p>Mobile:<br> +380 505 444 199</p>
