--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <footer>
         <div id="cv" class="cv">
             <div>
-                <h1 id="h1">Vadym Chervoniak</h1>
+                <div id="h1">Vadym Chervoniak</div>
                 <br>
                 <hr style="width: 100%;">
                 <div id="h2">JavaScript | Python
@@ -197,8 +197,8 @@
     </footer>
 
     <script>
-        document.body.style.width = '100%';
-document.body.style.height = '100%';
+//         document.body.style.width = '100%';
+// document.body.style.height = '100%';
 document.body.style.display = 'flex';
 document.body.style.flexDirection = 'column';
 document.body.style.backgroundColor = 'black';
