--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
             <div id="timer_2"></div>
         </div>
         <div id="main_text">
-            <span id="text">&#913 ☥ &#914</span>
+            <img width="20%" src="AB.png" alt="logo">
+            <!-- <span id="text">&#913 ☥ &#914</span>
             
-            <span id="text_2">&#913 ☥ &#914</span>
+            <span id="text_2">&#913 ☥ &#914</span> -->
         </div>
 
             <div id="main_menu">
@@ -130,7 +131,7 @@
                 Physics
             </a></p>
         <h3>Courses:</h3>
-        <ul>
+        <ul class="courses">
             <li><a href="https://cs50.harvard.edu/web/2020/">cs50 - Web</a></li>
             <li><a href="https://cs50.harvard.edu/ai/2020/">cs50 - AI</a></li>
             <li><a href="https://pythoninstitute.org/pcap">Python cert</a></li>
