aib_logo anim cut to (49)50x12

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css" type="text/css">
-    <link rel="icon" type="image/png" href="AB.png" sizes="128x128" />
+    <link rel="icon" type="image/png" href="AIB_logo.png" sizes="128x128" />
     <!-- <link rel="stylesheet" media="screen and (min-width: 900px)" href="widescreen.css">
     <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css"> -->
 </head>
@@ -28,7 +28,7 @@
             <div id="timer_2"></div>
         </div>
         <div id="main_text">
-            <img width="20%" src="AB.png" alt="logo">
+            <img id="main_logo" src="AIB_logo_ua.png" alt="logo">
             <!-- <span id="text">&#913 ☥ &#914</span>
             
             <span id="text_2">&#913 ☥ &#914</span> -->
@@ -36,7 +36,15 @@
 
             <div id="main_menu">
                 <span><b>menu</b></span>
-                <span class="mirrored">menu</span></div>
+                <span class="mirrored">menu</span>
+                <!-- <ul>
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                    <li>4</li>
+                    <li>5</li>
+                </ul> -->
+            </div>
         </div>
     </div>
     <div id="logo_wrapper">
