--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>redirected</title>
+    <title>&copy; 2022 AIB</title>
     <style>
         :root {
             --side: min(100vw, 100vh);
@@ -211,8 +211,6 @@
             let b = rand();
             return `rgb(${r},${g},${b})`;
         }
-
-        console.log(`rand() = ${rand()}`);
 
         let logo = document.getElementById('logo');
         let AIB_copy_rights = document.getElementById('copy_rights');
