--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>&copy; 2022 AIB</title>
+    <title>Червоняк Вадим Вікторович</title>
     <style>
         :root {
             --side: min(100vw, 100vh);
@@ -182,11 +182,20 @@
             width: 100vw;
             height: 15vh;
         }
+        .seo {
+            visibility: hidden;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
     </style>
+    <script>
+        window.onload = () => document.title = '&copy; 2022 AIB';
+    </script>
 </head>
 
 <body class="centered">
-
+    <h1 class="seo">Червоняк Вадим Вікторович</h1>
     <div id="timer" class="centered"></div>
     <div id="logo_wrapper" class="centered" height="50%">
         <div id="logo"></div>
