add google SEO html

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         }
     </style>
     <script>
-        window.onload = () => document.title = '&copy; 2022 AIB';
+        window.onload = () => document.title += '| © 2022 AIB';
     </script>
 </head>
 
