move to 8ogdanovv

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Simple nice logo animation build with JavaScript">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Червоняк Вадим Вікторович</title>
+    <link rel="shortcut icon" href="AB.png" type="image/png">
+    <title>A<3B | 8ogdanovv</title>
     <style>
         :root {
             --side: min(100vw, 100vh);
@@ -183,12 +184,6 @@
             width: 100vw;
             height: 15vh;
         }
-        .seo {
-            visibility: hidden;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
         #logo {
             position: relative;
             box-shadow: 0 0 1rem #fff;
@@ -197,21 +192,20 @@
     <script>
         window.onload = () => {
             const YEAR = new Date().getFullYear()
-            document.title = `© ${YEAR} A<3B | vadym4che`
+            document.title = `© ${YEAR} A<3B | 8ogdanovv`
             document.getElementById('year').innerHTML = YEAR
         };
     </script>
 </head>
 
 <body class="centered">
-    <h1 class="seo">Червоняк Вадим Вікторович</h1>
     <div id="timer" class="centered"></div>
     <div id="logo_wrapper" class="centered" height="50%">
         <div id="logo"></div>
     </div>
     <div id="timer_2" class="centered"></div>
     <div id="copy_rigths" class="shadowed_txt">
-        &copy; <span id="year">2022</span> Vadym <i>vadym4che</i> Chervoniak
+        &copy; <span id="year">2022</span> Bogdanov <i>8ogdanovv</i> Vadim
     </div>
 
     <script>
